syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.anymind.hometest.payment.pointsystem.grpc";
option java_outer_classname = "PointSystemProto";
option objc_class_prefix = "HLW";

package payment;

service PointSystem {
  rpc charge (ChargeRequest) returns (ChargeReply) {}
  rpc record (RecordRequest) returns (RecordReply) {}
}

message ChargeRequest {
  string price = 1;
  fixed32 price_modifier = 2;
  string payment_method = 3;
  string datetime = 4;
}

message ChargeReply {
  string final_price = 1;
  int64 points = 2;
}

message ChargeRecord {
  string datetime = 1;
  string sales = 2;
  int64 points = 3;
}

message RecordRequest {
  string startDateTime = 1;
  string endDateTime = 2;
}

message RecordReply {
  repeated ChargeRecord sales = 1;
}

message Error {
  string error = 1;
}